# filter_ir-sim

./: CMakeLists.txt  README.md  data_simulasi.csv  ekf_binding.cpp  plot.py  ros_ir-sim(no use).py  run_keeper.py  run_striker.py  sim_runner.py  zcamera_model.py
evaluation/: plot.py
scenarios_keeper/: s0_potition.yaml  s1_forward.yaml
scenarios_player/: s0_check.yaml  s1_basic.yaml
scenarios_striker/: s0_static.yaml  s1_bvertical.yaml  s2_bhorizontal.yaml  s3_rforward.yaml  s4_rdiagonal.yaml
